[gd_scene load_steps=11 format=3 uid="uid://cbonq7c4ov10k"]

[ext_resource type="Script" path="res://level_1.gd" id="1_q3o8v"]
[ext_resource type="PackedScene" uid="uid://bksibx6lmwux5" path="res://player.tscn" id="2_5mdmp"]
[ext_resource type="PackedScene" uid="uid://jrqykjxu5xvs" path="res://audioviz.tscn" id="2_dkxjg"]
[ext_resource type="AudioStream" uid="uid://bt11abup8vtnf" path="res://jump.mp3" id="4_aswj8"]
[ext_resource type="PackedScene" uid="uid://cpi8uah1cbix2" path="res://palt.tscn" id="5_iw3ar"]
[ext_resource type="PackedScene" uid="uid://yyfk4vbb5hd3" path="res://ui.tscn" id="8_qvdht"]
[ext_resource type="PackedScene" uid="uid://brw7vdja2dykf" path="res://pause_menu.tscn" id="9_8upgy"]
[ext_resource type="PackedScene" uid="uid://x731w7k42kf4" path="res://game_over_menu.tscn" id="10_6hy64"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pcfsw"]
size = Vector2(47.1529, 1927.85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_orve4"]
size = Vector2(27, 1100.5)

[node name="Level1" type="Node2D"]
process_mode = 1
script = ExtResource("1_q3o8v")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.207843, 0.207843, 0.207843, 1)

[node name="Player" parent="." instance=ExtResource("2_5mdmp")]
position = Vector2(78, 303)
scale = Vector2(1.3, 1.3)

[node name="Jumpin" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("4_aswj8")
volume_db = -30.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(642, 334)
offset = Vector2(2.08165e-12, 2.08165e-12)
zoom = Vector2(0.4, 0.4)
editor_draw_limits = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(642, 334)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(65, -334)
rotation = -1.56379
shape = SubResource("RectangleShape2D_pcfsw")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(641, -3)
shape = SubResource("RectangleShape2D_orve4")

[node name="Plat2" parent="." instance=ExtResource("5_iw3ar")]
position = Vector2(90, 349)
velocity = Vector2(1, 2.08165e-12)

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(642, 334)

[node name="UI" parent="." instance=ExtResource("8_qvdht")]

[node name="Pause" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="Pause" instance=ExtResource("9_8upgy")]

[node name="GameOver" type="CanvasLayer" parent="."]

[node name="GameOverMenu" parent="GameOver" instance=ExtResource("10_6hy64")]
offset_top = 26.0
offset_bottom = -22.0

[node name="audioviz" parent="." instance=ExtResource("2_dkxjg")]
offset_top = -8.0
offset_bottom = 64.0
scale = Vector2(1.12, 1.12)

[connection signal="signal_game_over" from="." to="GameOver/GameOverMenu" method="_on_level_1_signal_game_over"]
[connection signal="toggle_game_paused" from="." to="Pause/PauseMenu" method="_on_level_1_toggle_game_paused"]
